  - #1957, ST_Distance to a one-point LineString returns NULL
  - #1976, Geography point-in-ring code overhauled for more reliability
  - #1978, wrong answer calculating length of closed circular arc (circle)
  - #1981, Remove unused but set variables as found with gcc 4.6+
  - #1989, Preprocess input geometry to just intersection with raster
  -        to be clipped
  - Update URL of Maven jar
  - #2019, ST_FlipCoordinates does not update bbox
  - #2026, improve performance of distance calculations
  - #2056, Fixed lack of SRID check of raster and geometry in ST_SetValue()
  - #2057, Fixed linking issue for raster2psql to libpq
  - #1581, ST_Clip(raster, ...) no longer imposes NODATA on a band if the
           corresponding band from the source raster did not have NODATA
  - #2072, Removed outdated checks preventing ST_Intersects(raster) from
           working on out-db bands
  - #2077, Fixed incorrect answers from ST_Hillshade(raster)


 * Enhancements *

  - #1928, Accept array properties in GML input multi-geom input
    (Kashif Rasul and Shoaib Burq / SpacialDB)

PostGIS 2.0.1
2012/06/22

* Bug Fixes *

  - #1264, fix st_dwithin(geog, geog, 0). 
  - #1468  shp2pgsql-gui table column schema get shifted
  - #1694, fix building with clang. (vince)
  - #1708, improve restore of pre-PostGIS 2.0 backups.
  - #1714, more robust handling of high topology tolerance.
  - #1755, ST_GeographyFromText support for higher dimensions.
  - #1759, loading transformed shapefiles in raster enabled db.
  - #1761, handling of subdatasets in NetCDF, HDF4 and HDF5 in raster2pgsql.
  - #1763, topology.toTopoGeom use with custom search_path.
  - #1766, don't let ST_RemEdge* destroy peripheral TopoGeometry objects.
  - #1774, Clearer error on setting an edge geometry to an invalid one.
  - #1775, ST_ChangeEdgeGeom collision detection with 2-vertex target.
  - #1776, fix ST_SymDifference(empty, geom) to return geom.
  - #1779, install SQL comment files.