@@ -223,3 +223,4 @@ ERROR:  ST_Segmentize: invalid max_distance 0 (must be >= 0)
 #1957|1
 ERROR:  invalid GML representation
 #1978|3.1413
+#1996|{"type":"Point","coordinates":[]}
